fixed layout issues with select components showing above fixed component
Select component had relative position and thus conflicted with fixed position of navigation.  Added z-index.

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -25,6 +25,7 @@
 .fixedContainer {
   composes: container;
   position: fixed;
+  z-index: 1000;
 }
 
 .header {
